(docker)修改容器名称

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pytorch-container",
+    "name": "information-task-container",
     "dockerComposeFile": "docker-compose.yml",
     "service": "gpu-service",
     "workspaceFolder": "/home/Elaina/pytorch",
