--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "information-task-container",
     "dockerComposeFile": "docker-compose.yml",
     "service": "gpu-service",
-    "workspaceFolder": "/home/Elaina/pytorch",
+    "workspaceFolder": "/pytorch",
     "shutdownAction": "stopCompose",
     "customizations": {
         "vscode": {
