增加任务1c++依赖

--- a/.devcontainer/gpu/Dockerfile
+++ b/.devcontainer/gpu/Dockerfile
@@ -3,4 +3,4 @@ FROM pytorch/pytorch:2.9.0-cuda13.0-cudnn9-runtime
 RUN pip3 install pandas openpyxl matplotlib
 
 RUN apt-get update &&\
-    apt-get install -y git 
+    apt-get install -y git cmake gcc libjsoncpp-dev libxlsxwriter-dev libxlnt-dev 
