增加安装clangd,给c++新建cmake

--- a/.devcontainer/gpu/Dockerfile
+++ b/.devcontainer/gpu/Dockerfile
@@ -3,7 +3,7 @@ FROM pytorch/pytorch:2.9.0-cuda13.0-cudnn9-runtime
 RUN pip3 install pandas openpyxl matplotlib
 
 RUN apt-get update &&\
-    apt-get install -y git cmake gcc g++ libjsoncpp-dev libxlsxwriter-dev 
+    apt-get install -y git cmake gcc g++ libjsoncpp-dev libxlsxwriter-dev clangd
 WORKDIR /package
 RUN git clone https://github.com/hosseinmoein/DataFrame.git &&\
     cd DataFrame &&\
