--- a/.devcontainer/gpu/Dockerfile
+++ b/.devcontainer/gpu/Dockerfile
@@ -13,7 +13,8 @@ RUN git clone https://github.com/hosseinmoein/DataFrame.git &&\
     make -j4 &&\
     make install
 #安装clangd20
-RUN apt-get update && apt-get install -y wget gnupg ca-certificates && wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key| apt-key add - \
+RUN apt-get update && apt-get install -y wget gnupg ca-certificates software-properties-common
+RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key| apt-key add - \
     && apt-add-repository "deb http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-20 main" \
     && apt-get update && apt-get install -y clangd-20 \
     && update-alternatives --install /usr/bin/clangd clangd /usr/bin/clangd-20 100
