--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.analysis.typeCheckingMode": "standard"
+    "python.analysis.typeCheckingMode": "standard",
+    "cmake.sourceDirectory": "/pytorch/src",
+    "clangd.arguments": [
+        "--header-insertion=never",
+        "--query-driver=/usr/bin/g*"
+    ]
 }
